# sol

./: package-lock.json
frontEnd/: package-lock.json  package.json
frontEnd/frontend/: package-lock.json
frontEnd/frontend/src/: App.js
frontEnd/frontend/src/components/: Header2.js
frontEnd/frontend/src/components/h/: Header.js
frontEnd/newfrontend/: package-lock.json  package.json
frontEnd/newfrontend/src/: App.js
frontEnd/newfrontend/src/LandingPage/: HeroSection.js  Homepage.js  Product.js  SomeProduct.js  WhatWeOffer.js
frontEnd/newfrontend/src/admin/: AdminDashboard.js
frontEnd/newfrontend/src/company/: AddProduct.js  Dashboard.js  Layout.js  ProductDescription.js  RegisterCompany.js  SignPage.js
frontEnd/newfrontend/src/payment/: Checkout.js  SolanaPay.js  checkpaymentstatus.js  interactWithContract.js
frontEnd/newfrontend/src/utilities/: ReduxGlobal.js
renewable_marketplace/: Anchor.toml
renewable_marketplace/programs/renewable_marketplace/: Cargo.toml
renewable_marketplace/programs/renewable_marketplace/src/: lib.rs
renewable_marketplace/tests/: renewable_marketplace.ts
